@@ -2,7 +2,7 @@
 <?org-vrjuggler-jccl-settings configuration.version="3.0"?>
 <configuration xmlns="http://www.vrjuggler.org/jccl/xsd/3.0/configuration" name="Configuration" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.0/configuration http://www.vrjuggler.org/jccl/xsd/3.0/configuration.xsd">
    <elements>
-      <sound_manager name="VR Juggler Sonix Sound Manager" version="1">
+      <sound_manager_sonix name="VR Juggler Sonix Sound Manager" version="1">
          <api>OpenAL</api>
          <listener_position>0.0</listener_position>
          <listener_position>0.0</listener_position>
@@ -92,7 +92,7 @@
                <position>0.0</position>
             </sound>
          </sound>
-      </sound_manager>
+      </sound_manager_sonix>
    </elements>
 </configuration>
 
