@@ -1,0 +1,36 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<?org-vrjuggler-jccl-settings definition.version="3.1"?>
+<definition xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.vrjuggler.org/jccl/xsd/3.1/definition" name="sound_manager_sonix" icon_path="jar:file:${VJ_BASE_DIR}/bin/beans/ProxyEditor.jar!/org/vrjuggler/vrjconfig/customeditors/proxyeditor/images/position64.jpg" xsi:schemaLocation="http://www.vrjuggler.org/jccl/xsd/3.1/definition http://www.vrjuggler.org/jccl/xsd/3.1/definition.xsd">
+   <definition_version version="1" label="Sonix Sound Manager">
+      <help/>
+      <parent/>
+      <category>/Audio</category>
+      <property valuetype="string" variable="false" name="api">
+         <help>Which sound API to use?</help>
+         <value label="API" defaultvalue="Stub"/>
+         <enumeration editable="true">
+            <enum label="Stub" value="Stub"/>
+            <enum label="OpenAL" value="OpenAL"/>
+            <enum label="Audiere" value="Audiere"/>
+            <enum label="AudioWorks" value="AudioWorks"/>
+            <enum label="Subsynth" value="Subsynth"/>
+         </enumeration>
+      </property>
+      <property valuetype="float" variable="false" name="listener_position">
+         <help>Position of the listener (that's you!) in world coordinate space.  Usually 0, 0, 0.</help>
+         <value label="x" defaultvalue="0.0"/>
+         <value label="y" defaultvalue="0.0"/>
+         <value label="z" defaultvalue="0.0"/>
+      </property>
+      <property valuetype="string" variable="true" name="file_search_path">
+         <help>Paths to search for sound files.</help>
+         <value label="Search Path" defaultvalue="${HOME}/sounds"/>
+      </property>
+      <property valuetype="configelement" variable="true" name="sound">
+         <help>Specify a list of sounds here.</help>
+         <value label="Sound Object"/>
+         <allowed_type>sound</allowed_type>
+      </property>
+      <upgrade_transform/>
+   </definition_version>
+</definition>
