@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-26-2004 patrickh    Renamed the config element type sound_manager to
+                        sound_manager_sonix.
 Nov-18-2004 patrickh    Updated to require Sonix 0.5.0.
 Nov-13-2004 patrickh    Updated to require Gadgeteer 0.20.0.
                         NEW VERSION: 1.1.162
